# vocbuilderAI

./: .gitignore  Archive.ankiaddon  README.md  README_ZH_TW.md  __init__.py  config.json  config.md  dev.py  manifest.json  prompts.py  pyproject.toml  vocbuilder.ankiaddon
libs/pydantic_core-2.14.5.dist-info/: RECORD
tests/: test_init.py
