[project]
name = "vocbuilderai"
version = "0.9"
description = "generate detailed notes for new vocabulary using LLM and Whisper's API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anki>=24.11",
    "aqt>=24.11",
    "pyqt6-webengine>=6.8.0",
    "pyqt6>=6.8.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "watchdog>=6.0.0",
]
